@@ -8,6 +8,8 @@
   * Restrict AMs shown in jacks editor to only compute aggregates (#1316).
   * Remove excessive calls to validate rspec (#1313).
   * Remove duplicate jacks loads (#1312).
+  * Remove site tag when component_manager_id is set, so the true site name
+     is shown (#1317).
 
 == 2.27 ==
  * Progress on #299 and #1120, remove dead code.
